# prompt-eval-harness

./: .gitignore  README.md  eval.config.yaml  prompt_eval_harness_trd.md  pyproject.toml
.github/workflows/: eval.yml
eval_harness/: __init__.py  cli.py  config.py  models.py  report.py  runner.py  scorer.py  storage.py
suites/classification/: prompt.yaml  suite.yaml
suites/classification/cases/: positive_review.yaml  tech_headline.yaml
suites/summarization/: prompt.yaml  suite.yaml
suites/summarization/cases/: climate_article.yaml  tech_announcement.yaml
