[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-eval-harness"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "openai>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
eval-harness = "eval_harness.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["eval_harness*"]
